--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-/nbproject/private/
+/vendor
+/node_modules
+/public/storage
+Homestead.yaml
+Homestead.json
+.env
+
+# phpstorm project files
+.idea
+# netbeans project files
+nbproject
+composer.phar
